--- a/index.css
+++ b/index.css
@@ -31,6 +31,8 @@ nav a {
 
 .header,
 .intro-content,
+.home-intro,
+.about-intro,
 .feeds {
     max-width: 1000px;
     margin: 0 auto;
@@ -175,7 +177,7 @@ footer {
     }
 
     .home-intro {
-        margin: 2em 2.5em;
+        margin: 2em auto;
     }
 
     .home-intro-content,
